fix: added --font-spacing-paragraph token var

--- a/components/00-tokens/layout/_layout.scss
+++ b/components/00-tokens/layout/_layout.scss
@@ -55,8 +55,8 @@ $layout-widths: map.deep-get(tokens.$tokens, size, component-layout, width);
 // The spacing-page-inner mixin should be applied to components that are
 // "content-like." They generally accompany other components within a "section."
 @mixin spacing-page-inner {
-  &.no-page-spacing + .wrapped-image {
-    margin-top: 1em;
+  .no-page-spacing + & {
+    margin-top: var(--font-spacing-paragraph);
   }
 
   &:not(.no-page-spacing) {
